fix: 途中